<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainActivityViewModel"
            type="com.example.android.mainactivity.MainActivityViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainactivity.MainActivity">

        <EditText
            android:id="@+id/txtRequestUpdates"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="248dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_30"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textViewLiveLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/liveLink"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="5dp"
            android:text="@string/how_often_to_update_location_in_seconds"
            app:layout_constraintBottom_toTopOf="@+id/txtRequestUpdates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.623"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintBottom_toTopOf="@+id/btnStop"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/txtRequestUpdates"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="510dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnStop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtRequestUpdates"
            app:layout_constraintTop_toBottomOf="@+id/txtRequestUpdates" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="73dp"
            android:text="@string/stop"
            app:layout_constraintBottom_toBottomOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/btnStart"
            app:layout_constraintTop_toTopOf="@+id/btnStart"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnOpenFtpSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openFtpSettings"
            app:layout_constraintBottom_toTopOf="@+id/btnFtpUpload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOpenBatteryOptimization"
            app:layout_constraintVertical_bias="0.14" />

        <Button
            android:id="@+id/btnFtpUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="306dp"
            android:text="@string/uploadToBlog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnOpenFtpSettings"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="@+id/btnOpenFtpSettings"
            app:layout_constraintTop_toBottomOf="@+id/btnOpenFtpSettings" />

        <Button
            android:id="@+id/btnUploadPictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="210dp"
            android:text="@string/uploadPics"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnOpenFtpSettings"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="@+id/btnOpenFtpSettings"
            app:layout_constraintTop_toBottomOf="@+id/btnOpenFtpSettings" />

        <TextView
            android:id="@+id/textViewNumberOfTicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:text="@string/number_of_ticks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnStop"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toEndOf="@+id/btnStart"
            app:layout_constraintTop_toBottomOf="@+id/btnStart"
            app:layout_constraintVertical_bias="0.247" />

        <Button
            android:id="@+id/btnOpenBatteryOptimization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:text="@string/open_battery_optimization"
            app:layout_constraintBottom_toTopOf="@+id/textViewNumberOfTicks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStart"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextTextMultiLineLog"
            android:layout_width="296dp"
            android:layout_height="198dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:focusable="false"
            android:gravity="start|top"
            android:hint="@string/log"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>