<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settingsActivityViewModel"
            type="com.example.android.settingsactivity.SettingsActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settingsactivity.SettingsActivity">

        <EditText
            android:id="@+id/editTextFileName"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/defaultFileName"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewFileName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/fileName"
            app:layout_constraintBottom_toBottomOf="@+id/editTextFileName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextFileName"
            app:layout_constraintVertical_bias="0.448" />

        <EditText
            android:id="@+id/editTextFolderName"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/defaultFolder"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextFileName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/editTextFileName"
            app:layout_constraintTop_toBottomOf="@+id/editTextFileName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folderName"
            app:layout_constraintBottom_toBottomOf="@+id/editTextFolderName"
            app:layout_constraintEnd_toEndOf="@+id/textViewFileName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextFolderName"
            app:layout_constraintVertical_bias="0.482" />

        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/saveSettings"
            app:layout_constraintEnd_toEndOf="@+id/editTextFolderName"
            app:layout_constraintHorizontal_bias="0.598"
            app:layout_constraintStart_toStartOf="@+id/textViewFolder"
            app:layout_constraintTop_toBottomOf="@+id/editTextFolderName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>